# nyaPaint

./: .gitignore  CMakeLists.txt  nyaPaint.rc
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/canvas/: Canvas.cpp  Canvas.h  CanvasModel.cpp  CanvasModel.h
src/format/: NyaFormat.cpp  NyaFormat.h
src/resources/: resources.qrc
src/tools/: EraserTool.cpp  EraserTool.h  FillTool.cpp  FillTool.h  LineTool.cpp  LineTool.h  PenTool.cpp  PenTool.h  Tool.cpp  Tool.h  ToolManager.cpp  ToolManager.h
src/ui/: BrushSizeWidget.cpp  BrushSizeWidget.h  ColorPickerWidget.cpp  ColorPickerWidget.h  ToolBarWidget.cpp  ToolBarWidget.h  TopBar.cpp  TopBar.h
src/undo/: UndoManager.cpp  UndoManager.h
